# boundary-conditions-editor

./: .gitignore  CMakeLists.txt  EditorWindow.cpp  EditorWindow.hpp  README.md  conanfile.txt  main.cpp
include/: EditorWindow.hpp  JSONSerializable.hpp
include/bc/: BoundaryCondition.hpp  BoundaryConditionsParser.hpp  DeadPointForce.hpp  Displacement.hpp  FaceDistributedForce.hpp  FacePressure.hpp  Load.hpp  Pressure.hpp  Restraint.hpp
src/: EditorWindow.cpp  main.cpp
src/bc/: BoundaryConditionsParser.cpp  DeadPointForce.cpp  Displacement.cpp  FaceDistributedForce.cpp  FacePressure.cpp  Load.cpp  Pressure.cpp  Restraint.cpp
